# delivery/routes/Route.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"project-test/delivery/controllers/project"
+	"project-test/delivery/controllers/task"
 	"project-test/delivery/controllers/user"
 
 	"github.com/labstack/echo/v4"
@@ -16,6 +17,11 @@ func UserPath(e *echo.Echo, c user.UserController) {
 	auth.GET("/profile", c.GetbyID())
 	auth.PUT("/profile", c.Update())
 	auth.DELETE("/profile", c.Delete())
+}
+
+func TaskPath(e *echo.Echo, c task.TaskController) {
+	auth := e.Group("/tasks", middleware.JWT([]byte("$4dm!n$")))
+	auth.POST("", c.Insert())
 }
 
 func ProjectPath(e *echo.Echo, c project.ProjectController) {
