# openAPI.yaml
@@ -97,7 +97,7 @@ paths:
       responses:
         "200":
           $ref: "#/components/responses/Response200"
-  /todo/tasks:
+  /tasks:
     post:
       security:
         - JWTAuth: []
@@ -112,10 +112,8 @@ paths:
             schema:
               $ref: "#/components/schemas/CreateOrUpdateTodolist"
       responses:
-        "200":
-          $ref: "#/components/responses/Response200"
-        "400":
-          $ref: "#/components/responses/Response400"
+        "201":
+          $ref: "#/components/responses/Response201"
     get:
       security:
         - JWTAuth: []
@@ -163,7 +161,7 @@ paths:
                     - id: 2
                       name: php
                       priority: 3
-  /todo/tasks/{id}:
+  /tasks/{id}:
     put:
       security:
         - JWTAuth: []
@@ -198,7 +196,7 @@ paths:
           $ref: "#/components/responses/Response200"
         "400":
           $ref: "#/components/responses/Response400"
-  /todo/tasks/{id}/completed:
+  /tasks/{id}/completed:
     post:
       security:
         - JWTAuth: []
@@ -213,7 +211,7 @@ paths:
           $ref: "#/components/responses/Response200"
         "400":
           $ref: "#/components/responses/Response400"
-  /todo/tasks/{id}/reopen:
+  /tasks/{id}/reopen:
     post:
       security:
         - JWTAuth: []
@@ -406,15 +404,10 @@ components:
       type: object
       required:
         - name
-        - priority
       properties:
         name:
           type: string
           example: "Todo 1"
-        priority:
-          type: number
-          format: int32
-          example: 12312
         project_id:
           type: number
           format: int32
